--- a/koreacovid.Rmd
+++ b/koreacovid.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "covid 19"
-author: "Dr K"
-date: "5/2/2020"
+author: "Brandon Reyes"
+date: "5/21/2020"
 output:
   html_document: default
   pdf_document: default
